Fixed colour contrast of text-primary buttons.

--- a/scss/trema/elements.scss
+++ b/scss/trema/elements.scss
@@ -227,6 +227,7 @@ body #page {
         }
         &.text-primary {
             background-color: choose-contrast-color($primary) !important;
+            color: $primary !important;
         }
     }
 
